deployments/k8s/httpbin2022/httpbin2022-port8080-ingress.yaml
##################################################################################################
# httpbin2022 ingress using port 8080 into the container (your local port is still 80 to access the service)
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin2022
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin2022
            port:
              number: 8080
